--- a/.divless/index.html
+++ b/.divless/index.html
@@ -62,13 +62,13 @@
           [ .d-flex .flex-column .gap-half
             [small 'Author info:']
             [ .d-grid {cols:auto 1fr} .gap-half
-              [s 'Name' ._inAuthorName]
-              [in]
-              [s 'Email' ._inAuthorEmail]
-              [in]
+              [s 'Name']
+              [in ._inAuthorName]
+              [s 'Email']
+              [in ._inAuthorEmail]
             ]
             [small 'Commit message:']
-            [t type="text" rows="5" #_inCommitMsg]
+            [t type="text" rows="5" ._inCommitMsg]
             [btn 'Commit' data-onclick="git-commit"]
           ]
         ]
@@ -190,6 +190,7 @@
     ]
   </template>
   
+  <script src="https://cdn.jsdelivr.net/npm/idb@8/build/umd.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/tmpmachine/templateslot.js@v1.0.2/templateslot.min.js"></script>
   <script src="https://unpkg.com/@isomorphic-git/lightning-fs"></script>
   <script src="https://unpkg.com/isomorphic-git"></script>
